--- a/DS-A1-Module-B.ipynb
+++ b/DS-A1-Module-B.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "## Module B _(23 points)_\n",
     "\n",
-    "Group Members: 1)Jaishankar Harshit Geddam 2)Avani Jain 3)Himanshu Jat 4)Harsha Mahankali 5)Akhil Gaddam\n",
+    "Name: Akhilesh Yadav Gaddam\n",
     "\n",
     "__B1.__ _(5 points)_ You will be using part of the [Goodbooks 10k dataset](https://github.com/zygmuntz/goodbooks-10k) for this module. Read the `data/goodreads-books.csv` file into a list. Create a dictionary for each book in the list that contains these fields: authors, original title, original publication year, average rating, and ratings count. (You should convert average rating and ratings count into `float` and `int` types.) Put all these metadata dictionaries into a list. "
    ]
@@ -5255,7 +5255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
